--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,11 @@ forge_version=40.1.86
 mcp_channel=official
 mcp_mappings=1.18.2
 
+#Publishing
+mod_name=Sweaters
+curseforge_id=737472
+modrinth_id=1Q1NmVPD
+
 # Version
 version=0.1.0
 
