--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,13 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Base info
-mc_version=1.19.4
-forge_version=45.0.43
-mcp_channel=official
-mcp_mappings=1.19.4
+mc_version=1.20.1
+forge_version=47.0.19
+mapping_channel=official
+mapping_version=1.20.1
+mod_group=com.mrbysco.sweaters
+mod_id=sweaters
+mod_archive_name=Sweaters
 
 #Publishing
 mod_name=Sweaters
@@ -18,5 +21,5 @@ modrinth_id=1Q1NmVPD
 version=0.1.0
 
 # Dependencies
-jei_version=13.1.0.2
-statues_version=0.3.2.2
+jei_version=15.1.0.19
+statues_version=0.3.6
