--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Base info
-mc_version=1.20.1
-forge_version=47.1.3
+mc_version=1.20.2
+neo_version=20.2.64-beta
 mapping_channel=official
-mapping_version=1.20.1
+mapping_version=1.20.2
 mod_group=com.mrbysco.sweaters
 mod_id=sweaters
 mod_archive_name=Sweaters
@@ -22,4 +22,4 @@ version=0.1.0
 
 # Dependencies
 jei_version=15.2.0.23
-statues_version=0.3.6.5
+statues_version=0.3.6.6
