--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[46,)"
+loaderVersion="[1,)"
 issueTrackerURL="https://github.com/Mrbysco/Sweaters/issues"
 license="MIT"
 
@@ -15,6 +15,12 @@ Deck out your mobs in ugly Christmas sweaters with the Sweaters mod!
 [[dependencies.sweaters]]
 modId="minecraft"
 mandatory=true
-versionRange="[1.20,1.21)"
+versionRange="[1.20.2,1.21)"
+ordering="NONE"
+side="BOTH"
+[[dependencies.sweaters]]
+modId="neoforge"
+mandatory=true
+versionRange="[20.2.64-beta,)"
 ordering="NONE"
 side="BOTH"
