--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'eclipse'
     id 'idea'
     id 'maven-publish'
-    id 'net.neoforged.gradle.userdev' version '7.0.75'
-    id 'net.darkhax.curseforgegradle' version '1.1.17'
+    id 'net.neoforged.gradle.userdev' version '7.0.93'
+    id 'net.darkhax.curseforgegradle' version '1.1.18'
     id 'com.modrinth.minotaur' version "2.+"
 }
 
@@ -73,12 +73,12 @@ repositories {
 dependencies {
     implementation "net.neoforged:neoforge:${neo_version}"
 
-//    compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
-//    compileOnly "mezz.jei:jei-${mc_version}-forge-api:${jei_version}"
-//
-//    runtimeOnly "mezz.jei:jei-${mc_version}-forge:${jei_version}"
+    compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
+    compileOnly "mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}"
 
-    runtimeOnly "com.shynieke.statues:Statues-${mc_version}:${statues_version}"
+    runtimeOnly "mezz.jei:jei-${mc_version}-neoforge:${jei_version}"
+
+//    runtimeOnly "com.shynieke.statues:Statues-${mc_version}:${statues_version}"
 }
 
 jar {
